# QGIS-fork

src/quickgui/: CMakeLists.txt
src/quickgui/modern_ui_poc/: CMakeLists.txt  FEASIBILITY.md  main.cpp  qgslayerlistmodel.cpp  qgslayerlistmodel.h  qgsmodernuiapplication.cpp  qgsmodernuiapplication.h  resources.qrc
src/quickgui/modern_ui_poc/qml/: main.qml
src/quickgui/modern_ui_poc/qml/components/: LayerListItem.qml  LayerPanel.qml  MapZoomControls.qml  ModernSidebar.qml  ModernStatusBar.qml  ModernToolbar.qml  PlaceholderPanel.qml  SearchBox.qml  SidebarTab.qml  SmallButton.qml  StatusItem.qml  StatusSeparator.qml  ToolbarButton.qml  ToolbarSeparator.qml  WelcomeLink.qml  WelcomeOverlay.qml  ZoomButton.qml  qmldir
src/quickgui/modern_ui_poc/qml/theme/: Theme.qml
